--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,5 +1,14 @@
 <div class="main">
+<div ng-controller="NotificationController">
+<flash-message duration="5000"></flash-message>
+</div>
   <div class="container">
-		<h1>About Us</h1>
-	</div>
+<h1>About Us</h1>
+  <div ng-controller="NotificationController">
+  <button class="btn btn-success" ng-click="success()">Success</button>
+<button class="btn btn-info" ng-click="info()">Info</button>
+<button class="btn btn-warning" ng-click="warning()">Warning</button>
+<button class="btn btn-danger" ng-click="danger()">Danger</button>
+</div>
+</div>
 </div>
