--- a/app/views/pricing.html
+++ b/app/views/pricing.html
@@ -1,5 +1,14 @@
+<div ng-controller="NotificationController">
+<button class="btn btn-success" ng-click="success()">Success</button>
+<button class="btn btn-info" ng-click="info()">Info</button>
+<button class="btn btn-warning" ng-click="warning()">Warning</button>
+<button class="btn btn-danger" ng-click="danger()">Danger</button>
+</div>
 <div class="main">
   <div class="container">
-		<h1>Pricing Page</h1>
-	</div>
+<h1>Pricing Page</h1>
+</div>
+<div ng-controller="NotificationController">
+<flash-message duration="5000"></flash-message>
+</div>
 </div>
